--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,8 @@
 {
-  "singleQuote": true,
-  "jsxSingleQuote": true,
+  "singleQuote": false,
   "semi": false,
   "tabWidth": 2,
   "bracketSpacing": true,
-  "jsxBracketSameLine": false,
-  "arrowParens": "always",
-  "trailingComma": "none"
+  "arrowParens": "avoid",
+  "trailingComma": "es5"
 }
