--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   "dependencies": {
     "@react-three/drei": "^7.20.0",
     "@react-three/fiber": "^7.0.17",
+    "canvas": "^2.8.0",
     "three": "^0.134.0"
   }
 }
